--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,62 @@
-body{
+body {
     background: #fadede;
     background-image: url(Pictures/bottom_Rose.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
-.container{
-    width: 800px;
-    height: 400px;
+.container {
+    width: 90vw;
+    max-width: 800px;
+    min-height: 300px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 20px;
 }
 
-h1{
+h1 {
     font-family: "Swanky and Moo Moo", cursive;
     font-weight: 500;
     font-style: normal;
     padding: 10px;
-}
-
-.letter{
-    width: 600px;
-    height: 400px;
-    display: inline-block;
+    font-size: clamp(1.5rem, 5vw, 3rem);
+    line-height: 1.2;
     overflow-wrap: break-word;
-    position: absolute;
+    text-align: center;
 }
 
-.rose{
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    right: 0;
+.letter {
+    width: 100%;
+    height: auto;
     display: inline-block;
-    animation: yid 5s infinite;
-    transform: translateY(40%);
+    position: relative;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    box-sizing: border-box;
 }
 
-.petal{
+.rose {
+    width: 30vw;
+    max-width: 200px;
+    height: auto;
+    display: block;
+    margin: 20px auto 0 auto;
+    animation: yid 5s infinite;
+    transform: translateY(0);
+    position: relative;
+    z-index: 0;
+}
+
+
+/* Petals */
+.petal {
     width: 50px;
     height: 50px;
     background: #fe7696;
@@ -51,14 +67,16 @@ h1{
     transform-origin: bottom right;
     animation: zhanki2 10s infinite;
 }
-.petal:nth-child(2){
+
+.petal:nth-child(2) {
     transform-origin: right bottom;
     transform: rotate(90deg);
     background: #fe7696;
     left: -10px;
     animation: zhanki1 10s infinite;
 }
-.petal:nth-child(3){
+
+.petal:nth-child(3) {
     width: 40px;
     height: 40px;
     z-index: 1;
@@ -67,7 +85,8 @@ h1{
     transform-origin: bottom right;
     animation: zhanki2 10s infinite;
 }
-.petal:nth-child(4){
+
+.petal:nth-child(4) {
     transform: rotate(90deg);
     width: 40px;
     height: 40px;
@@ -77,7 +96,8 @@ h1{
     transform-origin: bottom right;
     animation: zhanki1 10s infinite;
 }
-.petal:nth-child(5){
+
+.petal:nth-child(5) {
     width: 50px;
     height: 50px;
     border-radius: 20px;
@@ -87,12 +107,14 @@ h1{
     background: #d1123f;
 }
 
-.leaf{
+/* Leaf and stem */
+.leaf {
     position: absolute;
     top: 120px;
     left: -115px;
 }
-.stem{
+
+.stem {
     width: 240px;
     height: 40px;
     background: transparent;
@@ -101,7 +123,8 @@ h1{
     border-radius: 50% 50%;
     transform: rotate(100deg);
 }
-.leafs{
+
+.leafs {
     width: 50px;
     height: 40px;
     border-radius: 0px 50%;
@@ -111,7 +134,8 @@ h1{
     left: 100px;
     z-index: 0;
 }
-.leafs:nth-child(2){
+
+.leafs:nth-child(2) {
     width: 40px;
     height: 20px;
     top: 40px;
@@ -119,27 +143,52 @@ h1{
     transform: rotate(120deg);
 }
 
-@keyframes yid{
-    50%{
+/* Animations */
+@keyframes yid {
+    50% {
         transform: translateY(35%);
     }
-    100%{
+    100% {
         transform: translateY(40%);
     }
 }
-@keyframes zhanki1{
-    50%{
+
+@keyframes zhanki1 {
+    50% {
         transform: rotate(110deg);
     }
-    100%{
+    100% {
         transform: rotate(90deg);
     }
 }
-@keyframes zhanki2{
-    50%{
+
+@keyframes zhanki2 {
+    50% {
         transform: rotate(-20deg);
     }
-    100%{
+    100% {
         transform: rotate(0deg);
+    }
+}
+
+/* 📱 Mobile Adjustments */
+@media (max-width: 600px) {
+    .container {
+        position: static;
+        transform: none;
+        top: auto;
+        left: auto;
+        padding: 10vh 5vw;
+    }
+
+    .rose {
+        position: relative;
+        transform: none;
+        margin: 20px auto 0 auto;
+        display: block;
+    }
+
+    h1 {
+        font-size: 6vw;
     }
 }
